Ability to list namespaces from cluster
