# api/dto/response.go
@@ -8,3 +8,8 @@ type ServiceResultResponse struct {
 	IsSuccess bool                 `json:"isSuccess"`
 	Data      []service.ServiceDto `json:"data"`
 }
+
+type NamespaceListResponse struct {
+	IsSuccess bool      `json:"isSuccess"`
+	Data      *[]string `json:"data"`
+}
