# docs/swagger.json
@@ -8,6 +8,45 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/namespaces": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Namespace"
+                ],
+                "summary": "Get list of namespace",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.NamespaceListResponse"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.ErrorResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/services/{namespace}": {
             "get": {
                 "security": [
@@ -61,14 +100,28 @@
         "dto.ErrorResponse": {
             "type": "object",
             "properties": {
-                "error": {
+                "description": {
                     "type": "string"
                 },
                 "isSuccess": {
                     "type": "boolean"
                 },
-                "status": {
+                "message": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.NamespaceListResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "isSuccess": {
+                    "type": "boolean"
                 }
             }
         },
@@ -136,6 +189,10 @@
                 },
                 "creationTimestamp": {
                     "description": "Time when the service was created",
+                    "type": "string"
+                },
+                "externalIP": {
+                    "description": "ExternalIP is the Ip of the Loadbalancer attached with the service\nIf service type is not Loadbalaner then IP will be none",
                     "type": "string"
                 },
                 "labels": {
