# pkg/resource/service/servicelist.go
@@ -29,7 +29,6 @@ func (r *resource) ListServices(namespace *string) (*[]ServiceDto, error) {
 			CreationTimestamp: k.CreationTimestamp.Time,
 			Selector:          k.Spec.Selector,
 			ClusterIP:         k.Spec.ClusterIP,
-			ExternalIP:        k.Spec.ExternalIPs[0],
 		}
 
 		// Setting default state to be failed, Success state is set only if one of pod is in ready state
